Fix: collapse is zoom button Making a window is nearly complete. It appears ui-folder styling is not working as expected. Show installed applications fragment

--- a/boss/styles.css
+++ b/boss/styles.css
@@ -256,13 +256,13 @@ body {
   margin-left: -10px;
 }
 
-#desktop .ui-window .collapse-button {
+#desktop .ui-window .zoom-button {
   position: relative;
   top: 2px;
   right: 10px;
   width: 18px;
   height: 18px;
-  background-image: url("/boss/img/collapse-button.svg");
+  background-image: url("/boss/img/zoom-button.svg");
   background-position: center;
   background-repeat: no-repeat;
 }
